# resource-librarian

./: .gitignore  CLAUDE.MD  FIRST_RELEASE_GUIDE.md  IMPLEMENTATION_PLAN.md  LICENSE  MANUAL_TESTING.md  PROJECT_STATUS.md  PYPI_README.md  QUICK_START_RELEASE.md  README.md  RELEASE.md  check.sh  claude-prompts.md  claude-session-state.md  pyproject.toml  temp.txt
.github/: RELEASE_CHECKLIST.md
.github/workflows/: publish.yml  tests.yml
ai_docs/: claude-prompts.md  claude-session-state.md
docs/: ARCHITECTURE.md  CLI_COMMANDS_ANALYSIS.md  DEPENDENCIES.md  DEVELOPMENT.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  PARSING.md  README.md  SESSION_RECOVERY.md  claude-session-state.md
docs/api/: book_folder_scanner.md  book_ingestion.md  book_parser.md  epub_chapter_extractor.md  index.md
src/resourcelibrarian/: __init__.py  __main__.py  library.py
src/resourcelibrarian/cli/: __init__.py  commands.py
src/resourcelibrarian/core/: __init__.py  catalog_manager.py  index_generator.py
src/resourcelibrarian/models/: __init__.py  base.py  book.py  catalog.py  video.py
src/resourcelibrarian/sources/: __init__.py  book_folder_scanner.py  book_ingestion.py  book_parser.py  epub_chapter_extractor.py  video_ingestion.py  youtube_api.py  youtube_transcript.py
src/resourcelibrarian/utils/: __init__.py  hash.py  io.py
tests/: test_cli_book.py  test_cli_init.py  test_cli_video.py  test_init.py  test_library.py  test_models.py  test_sources_book_parser.py  test_sources_video_ingestion.py  test_utils_hash.py  test_utils_io.py
